fixed widespread issues.

--- a/JordanDeBordProject2/appsettings.json
+++ b/JordanDeBordProject2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JDProject2DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JDMovieAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApplicationName": "JD's Movie Application",
   "MaxYear": 2031,
