Updated app name.

--- a/JordanDeBordProject2/appsettings.json
+++ b/JordanDeBordProject2/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JDMovieAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ApplicationName": "JD's Movie Application",
+  "ApplicationName": "JD's Movie Service",
   "MaxYear": 2031,
   "CostValue": 0,
   "Logging": {
